--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,12 +4,15 @@
 name: Java CI with Maven
 
 on:
-  
+ 
+ push:
+    branches: [ master ]
+ 
  pull_request:
     branches: [ master ]
 
 jobs:
-  build:
+  Anchore-job:
 
     runs-on: ubuntu-latest
 
